--- a/mindex.html
+++ b/mindex.html
@@ -316,11 +316,13 @@
 			let startX = 0;
 			let startY = 0;
 			let isSwiped = false;
+			let startTime = 0;
 
 			button.addEventListener('touchstart', (e) => {
 				const touch = e.touches[0];
 				startX = touch.clientX;
 				startY = touch.clientY;
+				startTime = e.timeStamp;
 				isSwiped = false;
 			});
 
@@ -331,14 +333,11 @@
 				const deltaX = touch.clientX - startX;
 				const deltaY = touch.clientY - startY;
 
-				// Увеличиваем минимальное расстояние для свайпа
 				if (Math.abs(deltaX) > 100 || Math.abs(deltaY) > 100) {
 					isSwiped = true;
 
-					// Определяем направление свайпа
 					const direction = Math.abs(deltaX) > Math.abs(deltaY) ? (deltaX > 0 ? 'right' : 'left') : (deltaY > 0 ? 'down' : 'up');
 
-					// Анимация "уезжания" картинки
 					button.style.transition = 'transform 0.3s, opacity 0.3s';
 					if (direction === 'left' || direction === 'right') {
 						button.style.transform = `translateX(${deltaX > 0 ? 100 : -100}%)`;
@@ -347,28 +346,23 @@
 					}
 					button.style.opacity = '0';
 
-					// Удаляем картинку после завершения анимации
 					setTimeout(() => {
 						removeAnswer(button, answer);
-					}, 300); // Задержка в миллисекундах перед удалением картинки. Это время должно совпадать с длительностью анимации (transition)
+					}, 300);
 				}
 			});
 
-			// Возврат картинки на место, если свайп не завершен
 			button.addEventListener('touchend', (e) => {
 				if (!isSwiped) {
 					const deltaX = e.changedTouches[0].clientX - startX;
 					const deltaY = e.changedTouches[0].clientY - startY;
 
-					// Проверка скорости свайпа
 					const speedX = Math.abs(deltaX) / (e.timeStamp - startTime);
 					if (speedX < 0.5) {
-						// Возвращаем картинку на место, если скорость слишком низкая
 						button.style.transition = 'transform 0.2s, opacity 0.2s';
 						button.style.transform = 'translateX(0) translateY(0)';
 						button.style.opacity = '1';
 					} else {
-						// Свайп завершен, удаляем картинку
 						isSwiped = true;
 						button.style.transition = 'transform 0.3s, opacity 0.3s';
 						button.style.transform = `translateX(${deltaX > 0 ? 100 : -100}%)`;
