--- a/mindex.html
+++ b/mindex.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Угадай бренд по слогану</title>
     <style>
+        /* Ваши стили */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -190,10 +191,48 @@
             background-color: #ccc;
             cursor: not-allowed;
         }
+
+        /* Новые стили для начального экрана */
+        #start-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        #start-btn {
+            padding: 15px 30px;
+            font-size: 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #start-btn:hover {
+            background-color: #0056b3;
+        }
+
+        .hidden {
+            display: none !important; /* Добавлено !important */
+        }
     </style>
 </head>
 <body>
-    <div class="game-container">
+    <!-- Начальный экран -->
+    <div id="start-screen">
+        <button id="start-btn">Начать игру</button>
+    </div>
+
+    <!-- Игровой контейнер -->
+    <div class="game-container hidden">
         <div id="question-section">
             <h1 id="question"></h1>
         </div>
@@ -217,20 +256,66 @@
     <audio id="click-sound" src="sounds/click.mp3"></audio>
 
     <script>
-        // Разблокировка звука при загрузке страницы
-        window.addEventListener('load', () => {
-            const unlockSound = document.createElement('audio');
-            unlockSound.src = 'sounds/click.mp3'; // Короткий звук для разблокировки
-            unlockSound.volume = 0.01; // Делаем звук почти неслышным
-            unlockSound.play().then(() => {
-                console.log("Звук разблокирован!");
-            }).catch(error => {
-                console.error("Ошибка разблокировки звука:", error);
-            });
+        // Переменная для отслеживания разблокировки звука
+        let isSoundUnlocked = false;
 
-            // Симулируем взаимодействие пользователя
-            document.body.click();
+        // Функция для воспроизведения звука
+        function playSound(type) {
+            if (!isSoundUnlocked) {
+                console.log("Звук заблокирован: пользователь не начал игру.");
+                return;
+            }
+
+            let sound;
+            switch (type) {
+                case 'correct':
+                    sound = document.getElementById('correct-sound');
+                    break;
+                case 'wrong':
+                    sound = document.getElementById('wrong-sound');
+                    break;
+                case 'click':
+                    sound = document.getElementById('click-sound');
+                    break;
+                case 'swipe':
+                    sound = document.getElementById('swipe-sound');
+                    break;
+                default:
+                    console.error("Неизвестный тип звука:", type);
+                    return;
+            }
+            if (sound) {
+                console.log(`Воспроизведение звука: ${type}`);
+                sound.currentTime = 0;
+                sound.play().catch(error => console.error("Ошибка воспроизведения звука:", error));
+            } else {
+                console.error("Звук не найден:", type);
+            }
+        }
+
+        // Обработчик нажатия кнопки "Начать игру"
+        const startScreen = document.getElementById('start-screen');
+        const startBtn = document.getElementById('start-btn');
+        const gameContainer = document.querySelector('.game-container');
+
+        startBtn.addEventListener('click', () => {
+            console.log("Кнопка 'Начать игру' нажата."); // Отладочное сообщение
+
+            isSoundUnlocked = true; // Разблокируем звук
+            playSound('click'); // Воспроизводим короткий звук
+
+            // Скрываем начальный экран
+            startScreen.classList.add('hidden');
+            console.log("Начальный экран скрыт."); // Отладочное сообщение
+
+            // Показываем игровой контейнер
+            gameContainer.classList.remove('hidden');
+            console.log("Игровой контейнер показан."); // Отладочное сообщение
+
+            startGame(); // Запускаем игру
         });
+
+        // Остальной JavaScript код
         const questionElement = document.getElementById('question');
         const answerSection = document.getElementById('answer-section');
 
@@ -326,74 +411,66 @@
             });
         }
 
-		function addSwipeListener(button, answer) {
-			let startX = 0;
-			let startY = 0;
-			let isSwiped = false;
+        function addSwipeListener(button, answer) {
+            let startX = 0;
+            let startY = 0;
+            let isSwiped = false;
 
-			button.addEventListener('touchstart', (e) => {
-				const touch = e.touches[0];
-				startX = touch.clientX;
-				startY = touch.clientY;
-				isSwiped = false;
-			});
+            button.addEventListener('touchstart', (e) => {
+                const touch = e.touches[0];
+                startX = touch.clientX;
+                startY = touch.clientY;
+                isSwiped = false;
+            });
 
-			button.addEventListener('touchmove', (e) => {
-				if (isSwiped) return;
+            button.addEventListener('touchmove', (e) => {
+                if (isSwiped) return;
 
-				const touch = e.touches[0];
-				const deltaX = touch.clientX - startX;
-				const deltaY = touch.clientY - startY;
+                const touch = e.touches[0];
+                const deltaX = touch.clientX - startX;
+                const deltaY = touch.clientY - startY;
 
-				// Увеличиваем минимальное расстояние для свайпа
-				if (Math.abs(deltaX) > 100 || Math.abs(deltaY) > 100) {
-					isSwiped = true;
+                if (Math.abs(deltaX) > 100 || Math.abs(deltaY) > 100) {
+                    isSwiped = true;
 
-					// Определяем направление свайпа
-					const direction = Math.abs(deltaX) > Math.abs(deltaY) ? (deltaX > 0 ? 'right' : 'left') : (deltaY > 0 ? 'down' : 'up');
+                    const direction = Math.abs(deltaX) > Math.abs(deltaY) ? (deltaX > 0 ? 'right' : 'left') : (deltaY > 0 ? 'down' : 'up');
 
-					// Анимация "уезжания" картинки
-					button.style.transition = 'transform 0.3s, opacity 0.3s';
-					if (direction === 'left' || direction === 'right') {
-						button.style.transform = `translateX(${deltaX > 0 ? 100 : -100}%)`;
-					} else {
-						button.style.transform = `translateY(${deltaY > 0 ? 100 : -100}%)`;
-					}
-					button.style.opacity = '0';
+                    button.style.transition = 'transform 0.3s, opacity 0.3s';
+                    if (direction === 'left' || direction === 'right') {
+                        button.style.transform = `translateX(${deltaX > 0 ? 100 : -100}%)`;
+                    } else {
+                        button.style.transform = `translateY(${deltaY > 0 ? 100 : -100}%)`;
+                    }
+                    button.style.opacity = '0';
 
-					// Удаляем картинку после завершения анимации
-					setTimeout(() => {
-						removeAnswer(button, answer);
-					}, 300); // Задержка в миллисекундах перед удалением картинки. Это время должно совпадать с длительностью анимации (transition)
-				}
-			});
+                    setTimeout(() => {
+                        removeAnswer(button, answer);
+                    }, 300);
+                }
+            });
 
-			// Возврат картинки на место, если свайп не завершен
-			button.addEventListener('touchend', (e) => {
-				if (!isSwiped) {
-					const deltaX = e.changedTouches[0].clientX - startX;
-					const deltaY = e.changedTouches[0].clientY - startY;
+            button.addEventListener('touchend', (e) => {
+                if (!isSwiped) {
+                    const deltaX = e.changedTouches[0].clientX - startX;
+                    const deltaY = e.changedTouches[0].clientY - startY;
 
-					// Проверка скорости свайпа
-					const speedX = Math.abs(deltaX) / (e.timeStamp - startTime);
-					if (speedX < 0.5) {
-						// Возвращаем картинку на место, если скорость слишком низкая
-						button.style.transition = 'transform 0.2s, opacity 0.2s';
-						button.style.transform = 'translateX(0) translateY(0)';
-						button.style.opacity = '1';
-					} else {
-						// Свайп завершен, удаляем картинку
-						isSwiped = true;
-						button.style.transition = 'transform 0.3s, opacity 0.3s';
-						button.style.transform = `translateX(${deltaX > 0 ? 100 : -100}%)`;
-						button.style.opacity = '0';
-						setTimeout(() => {
-							removeAnswer(button, answer);
-						}, 300);
-					}
-				}
-			});
-		}
+                    const speedX = Math.abs(deltaX) / (e.timeStamp - startTime);
+                    if (speedX < 0.5) {
+                        button.style.transition = 'transform 0.2s, opacity 0.2s';
+                        button.style.transform = 'translateX(0) translateY(0)';
+                        button.style.opacity = '1';
+                    } else {
+                        isSwiped = true;
+                        button.style.transition = 'transform 0.3s, opacity 0.3s';
+                        button.style.transform = `translateX(${deltaX > 0 ? 100 : -100}%)`;
+                        button.style.opacity = '0';
+                        setTimeout(() => {
+                            removeAnswer(button, answer);
+                        }, 300);
+                    }
+                }
+            });
+        }
 
         function removeAnswer(button, answer) {
             playSound('click');
@@ -430,6 +507,8 @@
         }
 
         function handleTimeOut() {
+            playSound('wrong'); // Воспроизведение звука при истечении времени
+
             const remainingAnswers = document.querySelectorAll('.answer:not(.hide)');
             remainingAnswers.forEach(answer => {
                 answer.classList.add('wrong');
@@ -487,34 +566,6 @@
             alert("Счетчик игр сброшен. Вы можете снова играть.");
         }
 
-		function playSound(type) {
-			let sound;
-			switch (type) {
-				case 'correct':
-					sound = document.getElementById('correct-sound');
-					break;
-				case 'wrong':
-					sound = document.getElementById('wrong-sound');
-					break;
-				case 'click':
-					sound = document.getElementById('click-sound');
-					break;
-				case 'swipe':
-					sound = document.getElementById('swipe-sound');
-					break;
-				default:
-					console.error("Неизвестный тип звука:", type);
-					return;
-			}
-			if (sound) {
-				console.log(`Воспроизведение звука: ${type}`);
-				sound.currentTime = 0;
-				sound.play().catch(error => console.error("Ошибка воспроизведения звука:", error));
-			} else {
-				console.error("Звук не найден:", type);
-			}
-		}
-
         function startTimer() {
             let timeLeft = timeLimit;
             const progressBar = document.getElementById('progress-bar');
@@ -545,8 +596,6 @@
             closeModal();
             startGame();
         });
-
-        startGame();
     </script>
 </body>
 </html>
