--- a/mindex.html
+++ b/mindex.html
@@ -391,19 +391,19 @@
             {
                 question: "The Ultimate Driving Machine",
                 answers: [
-                    { text: "BMW", correct: true, image: "images/adidas.png" },
-                    { text: "Mercedes-Benz", correct: false, image: "images/adidas.png" },
-                    { text: "Audi", correct: false, image: "images/adidas.png" },
-                    { text: "Toyota", correct: false, image: "images/adidas.png" }
+                    { text: "BMW", correct: true, image: "images/adidas.jpg" },
+                    { text: "Mercedes-Benz", correct: false, image: "images/nike.jpg" },
+                    { text: "Audi", correct: false, image: "images/adidas.jpg" },
+                    { text: "Toyota", correct: false, image: "images/nike.jpg" }
                 ]
             },
             {
                 question: "Just Do It",
                 answers: [
-                    { text: "Nike", correct: true, image: "images/adidas.png" },
-                    { text: "Adidas", correct: false, image: "images/adidas.png" },
-                    { text: "Puma", correct: false, image: "images/adidas.png" },
-                    { text: "Reebok", correct: false, image: "images/adidas.png" }
+                    { text: "Nike", correct: true, image: "images/nike.jpg" },
+                    { text: "Adidas", correct: false, image: "images/adidas.jpg" },
+                    { text: "Puma", correct: false, image: "images/nike.jpg" },
+                    { text: "Reebok", correct: false, image: "images/adidas.jpg" }
                 ]
             },
             // Добавьте больше вопросов здесь
